# DaneJoeStringify

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DaneJoeStringifyConfig.cmake.in  danejoe_install_export.cmake
example/: CMakeLists.txt
example/source/: main.cpp
include/danejoe/stringify/: stringify.hpp  stringify_config.hpp  stringify_format.hpp  stringify_to_string.hpp  stringify_traits.hpp
include/stringify/: stringify.hpp
include/version/: stringify_version.h.in
source/danejoe/stringify/: stringify.cpp  stringify_config.cpp  stringify_format.cpp
source/stringify/: stringify.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/source/: test_to_string.cpp  test_to_string_edge.cpp
tests/: CMakeLists.txt
tests/include/: demo_stringify.hpp
tests/source/: demo_stringify.cpp  main.cpp
tests/unit/: CMakeLists.txt
tests/unit/source/: test_smoke.cpp  test_stringify_config.cpp  test_stringify_format.cpp
